tests/sqlcmd/baselines/errors/start_session2.errbaseline
Unable to connect to VoltDB cluster
    fakeserver1:21212 - UnknownHostException
    fakeserver2:21212 - UnknownHostException
